3.x: Add missing annotations, fix many diamonds (#6795)
* 3.x: Add missing annotations, fix many diamonds

* Fix accidental JDK 9 API usage

* Fix NPE in unicast due to null-cleanup